@@ -107,3 +107,7 @@ body {
 	padding-left: 6px;
 	padding-right: 5px;
 }
+
+.help {
+	padding-left: 5px;
+}
