@@ -64,7 +64,7 @@
 			<tr><td>&nbsp;</td></tr>
 			
 			<tr>
-				<td colspan=4>
+				<td colspan=5>
 					<b><div id="highlight_text" class="text">Highlight</div></b>
 				</td>
 			</tr>
@@ -82,6 +82,9 @@
 				<td>
 					<button id="highlight_owned_default" class="btn">Default</button>
 				</td>
+				<td class="help">
+					<a href="http://enhancedsteam.com/featuredetail.php?id=1" target="_blank"><img height="16px" src="img/questionmark.png" /></a>
+				</td>
 			</tr>
 
 			<tr>
@@ -97,6 +100,9 @@
 				<td>
 					<button id="highlight_wishlist_default" class="btn">Default</button>
 				</td>
+				<td class="help">
+					<a href="http://enhancedsteam.com/featuredetail.php?id=2" target="_blank"><img height="16px" src="img/questionmark.png" /></a>
+				</td>				
 			</tr>
 
 			<tr>
@@ -266,6 +272,9 @@
 				<td height=30>
 					<div id="store_lowestprice_text" class="text">Show Price History Information</div>
 				</td>
+				<td class="help">
+					<a href="http://enhancedsteam.com/featuredetail.php?id=5" target="_blank"><img height="16px" src="img/questionmark.png" /></a>
+				</td>				
 			</tr>
 			<tr>
 				<td>&nbsp;</td>
@@ -399,6 +408,9 @@
 				<td height=30>
 					<div id="store_drm_text" class="text">Show 3rd Party DRM Warnings</div>
 				</td>
+				<td class="help">
+					<a href="http://enhancedsteam.com/featuredetail.php?id=3" target="_blank"><img height="16px" src="img/questionmark.png" /></a>
+				</td>				
 			</tr>
 
 			<tr>
@@ -408,6 +420,9 @@
 				<td height=30>
 					<div id="store_metacritic_text" class="text">Show Metacritic User Scores</div>
 				</td>
+				<td class="help">
+					<a href="http://enhancedsteam.com/featuredetail.php?id=10" target="_blank"><img height="16px" src="img/questionmark.png" /></a>
+				</td>						
 			</tr>
 			
 			<tr>
@@ -426,6 +441,9 @@
 				<td height=30>
 					<div id="store_wsgf_text" class="text">Show WSGF (Widescreen) Info</div>
 				</td>
+				<td class="help">
+					<a href="http://enhancedsteam.com/featuredetail.php?id=15" target="_blank"><img height="16px" src="img/questionmark.png" /></a>
+				</td>								
 			</tr>
 
 			<tr>
@@ -450,6 +468,9 @@
 				<td height=30>
 					<div id="total_spent_text" class="text">Show "Total Spent" on Account Page</div>
 				</td>
+				<td class="help">
+					<a href="http://enhancedsteam.com/featuredetail.php?id=6" target="_blank"><img height="16px" src="img/questionmark.png" /></a>
+				</td>					
 			</tr>
 			
 			<tr>
@@ -477,6 +498,9 @@
 				<td height=30>
 					<div id="greenlight_banner_text" class="text">Replace Steam Greenlight Banner</div>
 				</td>
+				<td class="help">
+					<a href="http://enhancedsteam.com/featuredetail.php?id=14" target="_blank"><img src="img/questionmark.png" height="16px" /></a>
+				</td>
 			</tr>
 
 			<tr>
@@ -485,7 +509,7 @@
 					<tr>
 						<td rowspan=3 valign=top><div id="profile_link_text" class="text">Show profile links to:</div></td>
 							<td valign=center><input type="checkbox" id="profile_steamgifts"><td><img src="img/ico/steamgifts.ico" width="16" height="16" border="0" /><td><font color="8bc53f">SteamGifts
-							<td valign=center><input type="checkbox" id="profile_steamtrades"><td><img src="img/ico/steamtrades.ico" width="16" height="16" border="0" /><td><font color="8bc53f">SteamTrades
+							<td valign=center><input tdype="checkbox" id="profile_steamtrades"><td><img src="img/ico/steamtrades.ico" width="16" height="16" border="0" /><td><font color="8bc53f">SteamTrades
 							<td valign=center><input type="checkbox" id="profile_steamrep"><td><img src="img/ico/steamrep.ico" width="16" height="16" border="0" /><td><font color="8bc53f">SteamRep
 						</tr>
 						<tr>
